# serial_communication_linux_example

./: CMakeLists.txt
src/: main.cpp  main_rx.cpp  main_tx.cpp
